--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@aws-sdk/client-dynamodb": "^3.682.0",
     "@aws-sdk/lib-dynamodb": "^3.685.0",
     "ajv": "^8.12.0",
-    "aws-cdk-lib": "2.156.0",
+    "aws-cdk-lib": "^2.165.0",
     "axios": "^1.1.2",
     "constructs": "^10.3.0",
     "jsonwebtoken": "^8.5.1",
